align issue fix

--- a/styles/Features.module.scss
+++ b/styles/Features.module.scss
@@ -216,4 +216,5 @@
 
 .rightItem {
   justify-content: right;
+  align-self: flex-end;
 }
